GPCONSOLE-4 CSS tweaks to fix editor being cut off. also some minor JS cleanup

--- a/web-app/css/grails-console.css
+++ b/web-app/css/grails-console.css
@@ -204,7 +204,6 @@ body, html {
 
 .CodeMirror-scroll {
     height: 100%;
-    overflow: visible;
 }
 
 #code-wrapper {
